# product-cybersecurity

./: .gitignore  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: build.yml  download.yml  hugo.yml
src/product_cybersecurity/cli/: cveviz_github.py  downloader.py  graph.py  installer.py
src/product_cybersecurity/models/: capecparser.py  cve_model.py  cweparser.py
src/product_cybersecurity/utils/: markdownutils.py  parsingutils.py
www/: config.toml
www/content/: CAPECs.md  CWEs.md  _index.md  licenses.md
www/content/posts/: test-post.md
www/static/: datarace.html  line_graph.html  script.js  style.css  visualizer.html
www/static/data/: cve_per_cna_per_month_full.csv  cve_per_cna_per_year_no_mitre_2015.csv  cve_per_cwe_per_year.csv  data_cumulative_year_no_mitre_2015.csv  total_cves_per_month_cumulative.csv  total_cves_per_month_published_cumulative.csv
www/static/graphs/: CAPEC-112.json  CAPEC-113.json  CAPEC-114.json  CAPEC-115.json  CAPEC-116.json  CAPEC-117.json  CAPEC-122.json  CAPEC-123.json  CAPEC-124.json  CAPEC-125.json  CAPEC-129.json  CAPEC-130.json  CAPEC-131.json  CAPEC-137.json  CAPEC-148.json  CAPEC-151.json  CAPEC-153.json  CAPEC-154.json  CAPEC-161.json  CAPEC-165.json  CAPEC-169.json  CAPEC-173.json  CAPEC-175.json  CAPEC-176.json  CAPEC-184.json  CAPEC-188.json  CAPEC-192.json  CAPEC-21.json  CAPEC-212.json  CAPEC-216.json  CAPEC-22.json  CAPEC-224.json  CAPEC-227.json  CAPEC-233.json  CAPEC-240.json  CAPEC-242.json  CAPEC-248.json  CAPEC-25.json  CAPEC-26.json  CAPEC-272.json  (+145 more)
