[project]
name = "temp-product-cyber-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "networkx[default]>=3.5",
    "pydantic>=2.11.7",
    "types-networkx>=3.5.0.20250701",
    "requests>=2.32.3",
    "types-requests>=2.32.4.20250611",
    "datamodel-code-generator[http]>=0.31.2",
    "polars>=1.31.0",
    "ipykernel>=6.29.5",
    "pyarrow>=20.0.0",
    "tdqm>=0.0.1",
    "types-tqdm>=4.67.0.20250516",
]

[project.scripts]
cyber-data-downloader = "temp_product_cyber_data.cli.downloader:main"
cyber-data-installer = "temp_product_cyber_data.cli.installer:main"
cyber-data-graph-generator = "temp_product_cyber_data.cli.graph:main"
cyber-data-cve-visualizer = "temp_product_cyber_data.cli.cveviz:main"
